--- a/Twin Dragon_IDEX.cfg
+++ b/Twin Dragon_IDEX.cfg
@@ -2,6 +2,8 @@
 # To use this config, the firmware should be compiled for the
 # STM32F446 with a "32KiB bootloader" and a "12MHz crystal" clock reference.
 
+#This line is to test the Github autoupdate integration of cfg
+
 # See docs/Config_Reference.md for a description of parameters.
 
 # Definition for the primary carriage (holding the primary extruder)
